feat(crm): open counsellor breakdown by default + name weak counsellors
AI Intelligence page: the per-counsellor breakdown now shows each rep's
coaching drill-in expanded by default (click to collapse) so managers
see "what they can improve" without a click.

Team coaching: for each rubric quality, attribute scores per counsellor
and surface the reps scoring below the team average for it (weakest 3,
names resolved via one AuthService batch). The shared TeamCoachingSection
renders these as "Can improve: <name> · <score>" under each field, so it
shows on the AI Intelligence page, Call Log, and CRM Intelligence report.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>